objects/MedProBT__Unmatched_Record__c.object
<CustomObject>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Practice_Name__c</fullName>
        <label>Group Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Case_Safe_ID__c</fullName>
        <label>ID Case Safe ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_eligiblility__c</fullName>
        <label>License eligiblility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_state__c</fullName>
        <label>License state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_type__c</fullName>
        <label>License type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Literal_License_Status__c</fullName>
        <label>Literal License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_Active__c</fullName>
        <label>MP NPI Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_City__c</fullName>
        <label>MP NPI City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_Number__c</fullName>
        <label>MP NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_State__c</fullName>
        <label>MP NPI State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_PECOS_O_R__c</fullName>
        <label>MP PECOS O R</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__AnnualRevenue__c</fullName>
        <label>AnnualRevenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Contact2__c</fullName>
        <label>MedProBT  Contact2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedProBT__CustomerPriority__c</fullName>
        <label>CustomerPriority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__DEA_registration__c</fullName>
        <label>DEA registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID_External_ID__c</fullName>
        <label>ID_External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID_ID__c</fullName>
        <label>ID ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID_MedPro_Validated__c</fullName>
        <label>ID MedPro Validated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID_NPI_number__c</fullName>
        <label>ID NPI number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID_Name__c</fullName>
        <label>ID_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__License_Status__c</fullName>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__MailingState__c</fullName>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__MedProID__c</fullName>
        <label>MedProID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__MedPro_Validated__c</fullName>
        <label>MedPro Validated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Prof_Desig__c</fullName>
        <label>MedProBT  Prof Desig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__SLAExpirationDate__c</fullName>
        <label>SLAExpirationDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Sic__c</fullName>
        <label>Sic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__State_License_Issue_Date__c</fullName>
        <label>State License Issue Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__State_License_Number__c</fullName>
        <label>State License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Times_Updated__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Times Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Unmatched_Reason__c</fullName>
        <label>Unmatched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Validation_status__c</fullName>
        <label>Validation status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedPro_Last_Update__c</fullName>
        <label>MedPro Last Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_First_Name__c</fullName>
        <label>NPI First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Last_Name__c</fullName>
        <label>NPI Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_1_Affects_Eligibility__c</fullName>
        <label>Sanction 1 Affects Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_1_Date__c</fullName>
        <label>Sanction 1 Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_2_Affects_Eligibility__c</fullName>
        <label>Sanction 2 Affects Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_2_Date__c</fullName>
        <label>Sanction 2 Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_3_Affects_Eligibility__c</fullName>
        <label>Sanction 3 Affects Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_3_Date__c</fullName>
        <label>Sanction 3 Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_1__c</fullName>
        <label>Sanction Source 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_2__c</fullName>
        <label>Sanction Source 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_3__c</fullName>
        <label>Sanction Source 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_1__c</fullName>
        <label>Sanction Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_2__c</fullName>
        <label>Sanction Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_3__c</fullName>
        <label>Sanction Type 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_license_number__c</fullName>
        <label>State license number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>medproid__c</fullName>
        <label>medproid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro Unmatched Record</label>
    <listViews>
        <fullName>MedProBT__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MedProBT__ID_External_ID__c</columns>
        <columns>MedProBT__State__c</columns>
        <columns>MedProBT__Times_Updated__c</columns>
        <columns>MedProBT__Unmatched_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UR-{00000000}</displayFormat>
        <label>Unmatched Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Unmatched Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>